# OOP

./: CMakeSettings.json  README.md
bin.dbg/: rational_test.ilk
prj.lab/rational/: rational.cpp
prj.lab/rational/include/rational/: rational.hpp
prj.test/: rational_test.cpp
soin_v_d/: CMakeLists.txt
soin_v_d/prj.lab/: CMakeLists.txt
soin_v_d/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
soin_v_d/prj.lab/arrayd/include/arrayd/: arrayd.hpp
soin_v_d/prj.lab/arrayt/: CMakeLists.txt
soin_v_d/prj.lab/arrayt/include/arrayt/: arrayt.hpp
soin_v_d/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
soin_v_d/prj.lab/matrixs/include/matrixs/: matrixs.hpp
soin_v_d/prj.lab/orto/: orto.cpp
soin_v_d/prj.lab/rational/: CMakeLists.txt  rational.cpp
soin_v_d/prj.lab/rational/include/rational/: rational.hpp
soin_v_d/prj.test/: CMakeLists.txt  arrayd_test.cpp  matrixs_test.cpp  rational_test.cpp
